[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/interactive-objects/rotating wheel.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="rotating wheel" type="Node2D"]
script = ExtResource( 2 )

[node name="slab1" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="slab1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="slab1"]
shape = SubResource( 1 )

[node name="slab2" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="slab2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="slab2"]
shape = SubResource( 1 )

[node name="slab3" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="slab3"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="slab3"]
shape = SubResource( 1 )

[node name="slab4" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="slab4"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="slab4"]
shape = SubResource( 1 )
